# EdgeMapVertexMap

./: .gitignore  .gitmodules  BitArray.hpp  EdgeMap.hpp  GraphHelpers.hpp  LICENSE  Makefile  README.md  VertexMap.hpp  VertexSubset.hpp  io_util.hpp
AdjacencyBSet/: AdjacencyBSet.cpp  Makefile  compile_flags.txt
AdjacencyCompressedVector/: AdjacencyCompressedVector.cpp  Makefile
AdjacencyDenseSparseSet/: AdjacencyDenseSparseSet.cpp  Makefile
AdjacencyFlatHashSet/: AdjacencyFlatHashSet.cpp  CMakeLists.txt  Makefile  abseil-cpp  compile_flags.txt
AdjacencyHashMap/: AdjacencyHashMap.cpp  Makefile
AdjacencyHashSet/: AdjacencyHashSet.cpp  Makefile  compile_flags.txt
AdjacencyMatrix/: BinaryAdjacencyMatrix.cpp  Makefile  basic
AdjacencySet/: AdjacencySet.cpp  Makefile  compile_flags.txt
AdjacencyVector/: AdjacencyVector.cpp  CSR.cpp  Makefile
CSR/: CSR.cpp  Makefile  NumPaths
algorithms/: BC.h  BFS.h  BellmanFord.h  Components.h  PageRank.h  TC.h  Touchall.h
correct_output/slashdot/bc/: source1  source2  source3  source4  source5
correct_output/slashdot/bfs/: source1  source2  source3  source4  source5
correct_output/slashdot/cc/: output
correct_output/slashdot/pr/: iters10
correct_output/slashdot_weights/bf/: source1  source2  source3  source4  source5
correct_output/small_er/bfs/: source1  source2  source3  source4  source5
data/: small_er.adj
gap/: LICENSE  sliding_queue.h
include/EdgeMapVertexMap/algorithms/: BC.h  BFS.h  BellmanFord.h  Components.h  GraphEncoderEmbedding.hpp  PageRank.h  TC.h  Touchall.h  (+1 more)
(+7 files in other folders)
